Link de Mercado Pago

--- a/cursoNeuroNut.html
+++ b/cursoNeuroNut.html
@@ -2,6 +2,19 @@
 <html lang="es">
 <head>
 	<title>Bio Neuro Nutricion : : Creando un Nuevo Sendero 1</title>
+
+  <!-- Open Graph-->
+  <meta property="og:title" content="Bio Neuro Nutrición : : Creando un Nuevo Sendero 1">
+  <meta property="og:site_name" content="Bio Neuro Nutrición : : UCDM">
+  <meta property="og:url" content="https://neuronut.com.ar/">
+  <meta property="og:description" content="Creando un Nuevo Sendero 1
+                                          Nutrición y Espiritualidad.
+                                          Ser feliz cambiando mi Templo.
+                                          Te presento mi curso “creando un nuevo sendero”, es un viaje de transformación de ser víctima del peso, del cuerpo, de la alimentación hacia un nuevo paradigma de ser creador de tu nuevo sendero. El propósito del curso es ir hacia el sendero que te conduzca a la Paz interior.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://neuronut.com.ar/images/512h/bioNeuroNut.jpg">
+  <!-- Open Graph-->
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -63,15 +76,15 @@
       </div>
       <div class="col-md-8 d-flex align-items-center">
         <div class="staff-detail w-100 pl-md-5">
-          <h3>Que es Creando un Nuevo Sendero 1</h3>
+          <h3>Qué es Creando un Nuevo Sendero 1</h3>
           <p>
           <h4>Nutrición y Espiritualidad.<br>
             Ser feliz cambiando mi Templo.</h4>
-            <p>Te presento mi curso <strong>“creando un nuevo sendero”</strong>, es un viaje de transformación de ser victima del peso, del cuerpo, de la alimentación hacia un nuevo paradigma de ser creador de tu nuevo sendero. El proposito del curso es ir hacia el sendero que te conduzca a la Paz interior.</p>
-            <p>Este paradigma se basa en mi propia experiencia, en mi historia de vida. He tomado muchos caminos, los he recorrido con logros, fracasos, frustraciones, hasta que halle el mío propio de la mano del Espíritu Santo, quien me guía creando este sendero, fruto de todo lo experimentado, logrando aceptarme, sentirme libre y en Paz.</p>
-            <p>Para ello he atravesado crisis, oscuridades, miedos, culpas, todo esto acumulándose en mi sombra interior, guardándolo inconscientemente, pero con la llegada de la bioneuroemocion y Un Curso de Milagros han marcado un antes y un después, convirtiéndose en un AHORA. He descubierto una parte de mi mente que sabe y que puede, que es aquella en la cual el Guía esta en comunión con la Fuente, Origen, Dios, Universo. Desde esta parte de la mente que se tiene que entrenar porque no es con la que pensamos comúnmente, se logra crear una nueva vida pacifica, con pensamientos amorosos, en plenitud y confianza.<br></p>
-            <p>Este paradigma es una invitación a reescribir tu historia, a lograr un cuerpo saludable, con una mente sana, para dar cada paso con plena consciencia de como quieres sentirte, de como quieres pensar y así crear este nuevo sendero.</p>
-            <p>Este paradigma se trata de desaprender para aprender de nuevo, atendiéndote, aceptándote y alineándote.            </p>
+            <p>Te presento mi curso <strong>“creando un nuevo sendero”</strong>, es un viaje de transformación de ser víctima del peso, del cuerpo, de la alimentación hacia un nuevo paradigma de ser creador de tu nuevo sendero. El propósito del curso es ir hacia el sendero que te conduzca a la Paz interior.</p>
+            <p>Este paradigma se basa en mi propia experiencia, en mi historia de vida. He tomado muchos caminos, los he recorrido con logros, fracasos, frustraciones, hasta que hallé el mío propio de la mano del Espíritu Santo, quien me guía creando este sendero, fruto de todo lo experimentado, logrando aceptarme, sentirme libre y en Paz.</p>
+            <p>Para ello he atravesado crisis, oscuridades, miedos, culpas, todo esto acumulándose en mi sombra interior, guardándolo inconscientemente, pero con la llegada de la bioneuroemocion y Un Curso de Milagros han marcado un antes y un después, convirtiéndose en un AHORA. He descubierto una parte de mi mente que sabe y que puede, que es aquella en la cual el Guía está en comunión con la Fuente, Origen, Dios, Universo. Desde esta parte de la mente que se tiene que entrenar porque no es con la que pensamos comúnmente, se logra crear una nueva vida pacífica, con pensamientos amorosos, en plenitud y confianza.<br></p>
+            <p>Este paradigma es una invitación a reescribir tu historia, a lograr un cuerpo saludable, con una mente sana, para dar cada paso con plena consciencia de cómo quieres sentirte, de cómo quieres pensar y así crear este nuevo sendero.</p>
+            <p>Este paradigma se trata de desaprender para aprender de nuevo, atendiéndote, aceptándote y alineándote.</p>
           </p>
           <h3>Este paradigma requiere:</h3>
             <ol>
@@ -82,17 +95,17 @@
             <h3>Con este curso aprenderás:</h3>
               <ul>
                 <li>Alimentación consciente: alimentos, recetas, formas de preparación, porciones, combinaciones, ayunos, limpiezas.</li>
-                <li>Como funciona el aparato digestivo, sanar disfunciones alimentándote sanamente, espiritualmente.</li>
-                <li>Sanación de la mente. Como funciona nuestra mente. Mente dual. Ego. Mente uno. Espíritu. </li>
-                <li>Aprenderás el arte de escuchar el cuerpo, a través de señales o síntomas. Conociendo como piensas, a que asesor de la mente escuchas, cuales son tus creencias, tus limitaciones, bloqueos.</li>
-                <li>Aprenderás auto decodificar conflictos, a través de la meditación y respiración consciente, indispensable para tomar nuevas decisiones.</li>
+                <li>Cómo funciona el aparato digestivo, sanar disfunciones alimentándote sanamente, espiritualmente.</li>
+                <li>Sanación de la mente. Cómo funciona nuestra mente. Mente dual. Ego. Mente uno. Espíritu. </li>
+                <li>Aprenderás el arte de escuchar al cuerpo, a través de señales o síntomas. Conociendo cómo piensas, a qué asesor de la mente escuchas, cuáles son tus creencias, tus limitaciones, bloqueos.</li>
+                <li>Aprenderás a auto decodificar conflictos, a través de la meditación y respiración consciente, indispensable para tomar nuevas decisiones.</li>
               </ul>
 
           <div class="card text-center mt-4 mb-4 ftco-animate ">
             <div class="card-body">
               <h3 class="card-title">Inicio</h3>
               <i class="fas fa-stopwatch fa-4x"></i>
-              <p class="card-text">Octubre 2021</p>
+              <p class="card-text" id="inicio"></p>
             </div>
           </div>
           <div class="card-deck ftco-animate">
@@ -100,21 +113,21 @@
               <div class="card-body">
                 <h3 class="card-title">Horario</h3>
                 <i class="far fa-clock fa-4x"></i>
-                <p class="card-text"><strong>jueves</strong><br>de 6 PM. a 9 PM.</p>
+                <p class="card-text" id="horario"><br></p>
               </div>
             </div>
             <div class="card text-center  mt-4 mb-4 ftco-animate">
               <div class="card-body">
                 <h3 class="card-title">Metodología</h3>
                 <i class="fas fa-desktop fa-4x"></i>
-                <p class="card-text">ZOOM</p>
+                <p class="card-text" id="metodo"></p>
               </div>
             </div>
             <div class="card text-center col-md-4 mt-4 mb-4 ftco-animate">
               <div class="card-body">
                 <h3 class="card-title">Duración</h3>
                 <i class="far fa-calendar-alt fa-4x "></i>
-                <p class="card-text">5 meses</p>
+                <p class="card-text" id="duracion"></p>
               </div>
             </div>
           </div>
@@ -198,6 +211,7 @@
   cusrsosDisponibles(contNeuroL2,'4')
   crearPreciosML(contNeuro);
   crearPreciosPP(contNeuro);
+  curseInfo(contNeuro);
 </script>
 
 <script src="./js/precios.js"></script>
