--- a/cursoNeuroNutL2.html
+++ b/cursoNeuroNutL2.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>Bio Neuro Nutricion : : Creando un Nuevo Sendero 2</title>
+	<title>Bio Neuro Nutrición : : Creando un Nuevo Sendero 2</title>
+
+  <!-- Open Graph-->
+  <meta property="og:title" content="Bio Neuro Nutrición : : Creando un Nuevo Sendero 2">
+  <meta property="og:site_name" content="Bio Neuro Nutrición : : UCDM">
+  <meta property="og:url" content="https://neuronut.com.ar/">
+  <meta property="og:description" content="Creando un Nuevo Sendero 2
+                                          Nutrición y Espiritualidad.
+                                          Creando hábitos pacíficos para conectar con mi Paz interior.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://neuronut.com.ar/images/512h/bioNeuroNut.jpg">
+  <!-- Open Graph-->
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -67,20 +79,20 @@
           <p>
           <h4>Nutrición y Espiritualidad.<br>
             Creando hábitos pacíficos para conectar con mi Paz interior.</h4>
-            <h3>Este curso es la continuación <a href="./cursoNeuroNut.html" target="_blanck">Creando un Nuevo Sendero 1</a></h3>
+            <h3>Este curso es la continuación de <a href="./cursoNeuroNut.html" target="_blanck">Creando un Nuevo Sendero 1</a></h3>
 
-              <p>El proposito de este curso es vivir intensamente con toda honestidad, con una mente sana, recta, y en Paz. Lograr un estado de claridad mental para poder discernir, aquello que percibo como real y que me saca de mi zona de paz, para lograr una percepción sana y poder decidir de nuevo.</p>
-              <p>Contamos con un sistema de pensamientos dual, o egoico que se manifiesta a través de hábitos, rituales, condicionamientos que día a día repetimos sin cuestionarnos, sin hacer una pausa en donde pueda cuestionar, poner en duda, confrontar, y esto nos lleva a vivir reiteradas y repetidas veces situaciones que nos provocan dolor, sufrimiento, frustración, y nos aleja de la zona de paz tan anhelada y que olvidamos que es un derecho natural y que es inherente de cada uno.</p>
-              <p>En este curso, estudiaremos patologías asociadas a la alimentación, a la nutrición, junto a sus órganos protagonistas, sus funciones, pero a diferencia del resto de los cursos, en este aprenderemos a hacer un puente con la mirada del espíritu para ir mas alla de lo que vemos, y pensamos de las enfermedades, usaremos la bioneuroemocion, la biodescodificacion y el curso de milagros integrándolo a la ciencia.</p>
-              <p>El proposito de conocer y aprender en este curso se basa en que logremos ser parte activa, responsables de la sanación de mi mente donde albergan realmente la enfermedad, hacernos consciente de ello, y recuperar el poder de la sanación real, que proviene de nuestra parte espiritual. De esta manera conocemos una parte de mente que no solemos tener en cuenta, que es la que realmente contiene el Conocimiento, la Sabiduría y la Paz. </p>
-              <p>En esta parte de mente contamos con un asesor que es el Espíritu Santo, o Yo Superior, no importa como se nombre, lo importante es que lo reconozcamos y nos dejemos guiar, el conoce el camino de la sanación, que nuestra parte de mente egoica no, y esa es la razón por la cual creemos que nos ocurre todo lo que nos sucede.</p>
+              <p>El propósito de este curso es vivir intensamente con toda honestidad, con una mente sana, recta y en Paz. Lograr un estado de claridad mental para poder discernir aquello que percibo como real y que me saca de mi zona de paz, para lograr una percepción sana y poder decidir de nuevo.</p>
+              <p>Contamos con un sistema de pensamientos dual, o egoico, que se manifiesta a través de hábitos, rituales, condicionamientos que día a día repetimos sin cuestionarnos, sin hacer una pausa para poner en duda, confrontar, y esto nos lleva a vivir reiteradas y repetidas veces situaciones que nos provocan dolor, sufrimiento, frustración, y nos alejan de la zona de paz tan anhelada y que olvidamos que es un derecho natural y que es inherente a cada uno.</p>
+              <p>En este curso, estudiaremos patologías asociadas a la alimentación, a la nutrición, junto a sus órganos protagonistas, sus funciones, pero a diferencia del resto de los cursos, en éste aprenderemos a hacer un puente con la mirada del espíritu para ir más allá de lo que vemos y pensamos de las enfermedades. Usaremos la bioneuroemoción, la biodescodificación y el Curso de Milagros integrándolo a la ciencia.</p>
+              <p>El propósito de conocer y aprender en este curso se basa en que logremos ser parte activa, responsables de la sanación de mi mente donde albergan realmente la enfermedad, hacernos conscientes de ello y recuperar el poder de la sanación real, que proviene de nuestra parte espiritual. De esta manera conocemos una parte de nuestra mente que no solemos tener en cuenta y que es la que realmente contiene el Conocimiento, la Sabiduría y la Paz. </p>
+              <p>En esta parte de la mente contamos con un asesor que es el Espíritu Santo, o Yo Superior, no importa como se nombre, lo importante es que lo reconozcamos y nos dejemos guiar, Él conoce el camino de la sanación, que nuestra parte de la mente egoica no, y esa es la razón por la cual creemos que nos ocurre todo lo que nos sucede.</p>
               <p>Es un proceso de transformación, de integración, y de entrenamiento de la mente.</p>
               <p>El protagonista es el cuerpo físico, porque es el escenario donde transcurre todo lo que pensamos a nivel de la mente, por ello trabajemos la relación con el mismo, otorgándole una función que desconocemos desde lo consciente.</p>
-              <p>La patologías que analizaremos son Diabetes, Alergias alimentarias, hígado graso, obesidad, hipertensión, hipercolesterolemias entre otras. </p>
+              <p>Las patologías que analizaremos son Diabetes, Alergias alimentarias, hígado graso, obesidad, hipertensión, hipercolesterolemias, entre otras. </p>
               <p>Haremos una revisión de los trastornos alimentarios, bulimia, anorexia, trastornos compulsivos.</p>
               <p>Estudiaremos sus causas, pero el enfoque será desde la visión del Espíritu a través de las enseñanzas de Un Curso de Milagros. </p>
-              <p>Se harán practicas de Psicoterapia de UCDM, lo cual nos permitirá llegar a la causa, al juicio, al la interpretación errónea para poder hacer el Perdón del curso de UCDM, liberar y sanar, para conocer el Milagro.</p>
-              <p>Este curso esta dirigido a todas aquellas personas que desean desprogramarse de aquello que le preocupa, que ejerce presión, que provoca ansiedad, para pasar a construir hábitos pacíficos que logren disfrutar de una vida presente, activa, y en paz.</p>
+              <p>Se harán prácticas de Psicoterapia de UCDM, lo cual nos permitirá llegar a la causa, al juicio, a la interpretación errónea para poder hacer el Perdón del curso de UCDM, liberar y sanar, para conocer el Milagro.</p>
+              <p>Este curso está dirigido a todas aquellas personas que desean desprogramarse de aquello que les preocupa, que ejerce presión, que provoca ansiedad, para pasar a construir hábitos pacíficos que logren disfrutar de una vida presente, activa y en paz.</p>
           </p>
           <h3>Este paradigma requiere:</h3>
             <ol>
@@ -93,8 +105,7 @@
             <div class="card-body">
               <h3 class="card-title">Inicio</h3>
               <i class="fas fa-stopwatch fa-4x"></i>
-              <p class="card-text">7 de octubre 2021<br>
-                <strong>Se dicta el primer y tercer jueves de cada mes</strong></p>
+              <p class="card-text" id="inicio"></p>
             </div>
           </div>
           <div class="card-deck ftco-animate">
@@ -102,21 +113,21 @@
               <div class="card-body">
                 <h3 class="card-title">Horario</h3>
                 <i class="far fa-clock fa-4x"></i>
-                <p class="card-text">de 6 PM. a 9 PM.</p>
+                <p class="card-text" id="horario"></p>
               </div>
             </div>
             <div class="card text-center  mt-4 mb-4 ftco-animate">
               <div class="card-body">
                 <h3 class="card-title">Metodología</h3>
                 <i class="fas fa-desktop fa-4x"></i>
-                <p class="card-text">ZOOM</p>
+                <p class="card-text" id="metodo"></p>
               </div>
             </div>
             <div class="card text-center col-md-4 mt-4 mb-4 ftco-animate">
               <div class="card-body">
                 <h3 class="card-title">Duración</h3>
                 <i class="far fa-calendar-alt fa-4x "></i>
-                <p class="card-text">6 meses</p>
+                <p class="card-text" id="duracion"></p>
               </div>
             </div>
           </div>
@@ -199,6 +210,7 @@
   cusrsosDisponibles(contNeuro,'4');
   crearPreciosML(contNeuroL2);
   crearPreciosPP(contNeuroL2);
+  curseInfo(contNeuroL2);
 </script>
 
 <script src="./js/precios.js"></script>
