--- a/cursoUCDM1.html
+++ b/cursoUCDM1.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>Bio Neuro Nutricion : : UCDM un curso de milagros NIVEL 1</title>
+	<title>Bio Neuro Nutrición : : UCDM un curso de milagros NIVEL 1</title>
+  <!-- Open Graph-->
+  <meta property="og:title" content="Bio Neuro Nutrición : : Un Curso de Milagros 1">
+  <meta property="og:site_name" content="Bio Neuro Nutrición : : UCDM">
+  <meta property="og:url" content="https://neuronut.com.ar/">
+  <meta property="og:description" content="Un Curso de Milagros 1
+                                          Es un curso 100% espiritual. Es un recurso de aprendizaje.
+                                          Es Entrenamiento Mental.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://neuronut.com.ar/images/512h/bioNeuroNut.jpg">
+  <!-- Open Graph-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -63,7 +73,7 @@
       </div>
       <div class="col-md-8 d-flex align-items-center">
         <div class="staff-detail w-100 pl-md-5">
-          <h3>Que es Un Curso de Milagros 1</h3>
+          <h3>Qué es Un Curso de Milagros 1</h3>
           <p>
           <h4>Es un curso 100% espiritual. Es un recurso de aprendizaje.<br>
             Es Entrenamiento Mental.</h4>
@@ -72,22 +82,22 @@
             target="_blank">"milagro"</a> es el acto de lograr plena
           <a href="https://es.wikipedia.org/wiki/Un_curso_de_milagros#cite_note-1" target="_blank">"conciencia de la
             presencia del amor"</a> en la propia vida.
-          El objetivo del curso es conocer como funciona tu mente, tomar consciencia que hay dos consejeros que rigen tu
+          El objetivo del curso es conocer cómo funciona tu mente, tomar consciencia de que hay dos consejeros que rigen tu
           sistema de pensamiento:
-          Sistema de pensamiento dual o ego. Esta Regido por la ley de proyección-percepcion mas conocida como ley de
+          sistema de pensamiento dual o ego. Está regido por la ley de proyección-percepción más conocida como ley de
           causa y efecto.
-          Sistema de pensamiento único del Espiritu. Esta regido por la ley del Amor de Dios o Amor universal, Origen,
+          Sistema de pensamiento único del Espíritu. Está regido por la ley del Amor de Dios o Amor Universal, Origen,
           Fuente.
 
           </p>
           <h3>Programa de Un Curso de Milagros 1</h3>
-          <h4>Curso teórico practico, sus enseñanzas se basan en el libro Un Curso de Milagros</h4>
+          <h4>Curso teórico práctico. Sus enseñanzas se basan en el libro Un Curso de Milagros.</h4>
 
           <div class="card text-center mt-4 mb-4 ftco-animate ">
             <div class="card-body">
               <h3 class="card-title">Inicio</h3>
               <i class="fas fa-stopwatch fa-4x"></i>
-              <p class="card-text">sábado 20 de marzo de 2021</p>
+              <p class="card-text" id="inicio"></p>
             </div>
           </div>
           <div class="card-deck ftco-animate">
@@ -95,29 +105,29 @@
               <div class="card-body">
                 <h3 class="card-title">Horario</h3>
                 <i class="far fa-clock fa-4x"></i>
-                <p class="card-text">10 AM. a 12 AM.</p>
+                <p class="card-text" id="horario" ></p>
               </div>
             </div>
             <div class="card text-center  mt-4 mb-4 ftco-animate">
               <div class="card-body">
                 <h3 class="card-title">Metodología</h3>
                 <i class="fas fa-desktop fa-4x"></i>
-                <p class="card-text">ZOOM</p>
+                <p class="card-text" id="metodo"></p>
               </div>
             </div>
             <div class="card text-center col-md-4 mt-4 mb-4 ftco-animate">
               <div class="card-body">
                 <h3 class="card-title">Duración</h3>
                 <i class="far fa-calendar-alt fa-4x "></i>
-                <p class="card-text">5 meses</p>
+                <p class="card-text" id="duracion"></p>
               </div>
             </div>
           </div>
           <h3>Contenido del curso</h3>
           <ul>
             <li><strong>Taller 1:</strong> <br>
-              Introducción y descripción del Libro. Cimientos del cielo. Como llegamos hasta acá, a este plano, La
-              tierra. Meditación guiada.
+              Introducción y descripción del Libro. Cimientos del cielo. Cómo llegamos hasta acá, a este plano, la
+              Tierra. Meditación guiada.
             </li>
             <li><strong>Taller 2: </strong><br>
               Refuerzo de conceptos de los Cimientos del cielo. Explicación del Perdón y Expiación según Un Curso de
@@ -133,13 +143,13 @@
               La relación con uno mismo. Expiación desde la causa.
             </li>
             <li><strong>Taller 6: </strong><br>
-              Que es el Instante Santo. Practica.
+              Qué es el Instante Santo. Práctica.
             </li>
             <li><strong>Taller 7: </strong><br>
-              El cuerpo Físico. Dolor. Enfermedad. Carta al cuerpo.
+              El cuerpo físico. Dolor. Enfermedad. Carta al cuerpo.
             </li>
             <li><strong>Taller 8: </strong><br>
-              La Extensión de un Curso de Milagros. Propósitos. Practicas.
+              La Extensión de un Curso de Milagros. Propósitos. Prácticas.
             </li>
             <li><strong>Taller 9: </strong><br>
               Proyección o Extensión. La Extensión como recurso de creación.
@@ -226,6 +236,7 @@
   cusrsosDisponibles(contNeuroL2,'4');
   crearPreciosML(contUCDM1);
   crearPreciosPP(contUCDM1);
+  curseInfo(contUCDM1);
 </script>
 
 <script src="./js/precios.js"></script>
