--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html lang="es">
 
 <head>
-    <title>Bio Neuro Nutricion : : UCDM</title>
+    <title>Bio Neuro Nutrición : : UCDM</title>
+    <!-- Open Graph-->
+    <meta property="og:title" content="Bio Neuro Nutrición : : HOME">
+    <meta property="og:site_name" content="Bio Neuro Nutrición : : UCDM">
+    <meta property="og:url" content="https://neuronut.com.ar/">
+    <meta property="og:description" content="BIO NEURO NUTRICIÓN
+                                            Enfoque holístico espiritual.
+                                            Nutrición con Responsabilidad y honestidad. Poder, Decisión, Aceptación. Sano mi mente, sano mi cuerpo.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://neuronut.com.ar/images/512h/bioNeuroNut.jpg">
+    <!-- Open Graph-->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
