--- a/instructor-details.html
+++ b/instructor-details.html
@@ -38,7 +38,7 @@
   <div class="container">
     <div class="row no-gutters slider-text align-items-end justify-content-center">
       <div class="col-md-9 ftco-animate pb-5 text-center">
-       <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a href="index.html">Instructor <i class="fa fa-chevron-right"></i></a></span> <span>Instructor Details <i class="fa fa-chevron-right"></i></span></p>
+       <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a href="index.html">Instructora <i class="fa fa-chevron-right"></i></a></span> <span>BIO <i class="fa fa-chevron-right"></i></span></p>
        <h1 id="pageTitle" class="mb-0 bread"></h1>
      </div>
    </div>
@@ -60,10 +60,10 @@
           <h3>Acerca de Rosa B. de Almeida</h3>
           <p>La Bioneuronutricion se convirtió en mi propia aventura y en una búsqueda constante de mi Ser.
           <br>Elegí ser Licenciada en Nutrición en función a mi experiencia con el sobrepeso. Siempre fue mi talón de Aquiles, subía y bajaba kilos, entonces me dije que estudiaría nutrición para erradicar la problemática de mi vida.</p>
-          <p>Cuando tenia 37 años, un día desperté y me sentí vacía, sin propósitos preguntándome que me faltaba. Estaba casada con 3 hijos sanos, hermosos, un marido estupendo y una buena vida. Aun así sentía una profunda tristeza. Fue así como sentí la llamada de mi alma muy fuerte hacia esta profesión y decidí hacerla andar.</p> 
-          <p>La bionueronutricion surge como un nuevo paradigma de la Nutrición, donde el protagonista es el SER con sus creencias, sus pensamientos, su estilo de vida, el estado emocional en el que se encuentra, principalmente todo aquello que a un individuo le quite la paz….</p>
-          <p>Años mas tarde llega a mi Un Curso de Milagros, que fue quien dio sentido a mi profesión, y a mi vida entera.
-          <br>El curso me dio herramientas para sentirme esperanzada y recuperando completamente la fe en el Espíritu para entregarme a El y es quien guía hoy mi vida.</p>
+          <p>Cuando tenia 37 años, un día desperté y me sentí vacía, sin propósitos preguntándome qué me faltaba. Estaba casada con 3 hijos sanos, hermosos, un marido estupendo y una buena vida. Aun así sentía una profunda tristeza. Fue así como sentí la llamada de mi alma muy fuerte hacia esta profesión y decidí hacerla andar.</p> 
+          <p>La bionueronutrición surge como un nuevo paradigma de la Nutrición, donde el protagonista es el SER con sus creencias, sus pensamientos, su estilo de vida, el estado emocional en el que se encuentra, principalmente todo aquello que a un individuo le quite la paz…</p>
+          <p>Años más tarde llega a mi Un Curso de Milagros, que fue quien dio sentido a mi profesión, y a mi vida entera.
+          <br>El curso me dio herramientas para sentirme esperanzada y recuperando completamente la fe en el Espíritu para entregarme a Él y es quien guía hoy mi vida.</p>
           <p>Me siento implicada y comprometida a compartir el mensaje de Paz y de Amor que el curso imparte, y así lo establecí en mis consultas privadas y en mis talleres grupales.</p>
       </div>
     </div>
