--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>Bio Neuro Nutricion : : UCDM</title>
+	<title>Bio Neuro Nutrición : : UCDM</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -52,7 +52,7 @@
 						<div class="row no-gutters">
 							<div class="col-lg-8 col-md-7 order-md-last d-flex align-items-stretch">
 								<div class="contact-wrap w-100 p-md-5 p-4">
-									<h3 class="mb-4">Sigamos en contácto</h3>
+									<h3 class="mb-4">Sigamos en contacto</h3>
 									<form action="./ejemploFormularioConAdjunto/enviarFormularioDeContactos.php" method="POST" id="formulario-ejemplo" name="contactForm" class="contactForm">
 										<div class="row">
 											<div class="col-md-6">
@@ -92,14 +92,14 @@
 							</div>
 							<div class="col-lg-4 col-md-5 d-flex align-items-stretch">
 								<div class="info-wrap bg-primary w-100 p-md-5 p-4">
-									<h3>Tu opinión es fundamental par seguir creciendo juntos</h3>
-									<p class="mb-4">Dejanos tus comentarios y sugerencias</p>
+									<h3>Tu opinión es fundamental para seguir creciendo juntos.</h3>
+									<p class="mb-4">Dejanos tus comentarios y sugerencias.</p>
 									<div class="dbox w-100 d-flex align-items-start">
 										<div class="icon d-flex align-items-center justify-content-center">
 											<span class="fa fa-map-marker"></span>
 										</div>
 										<div class="text pl-3">
-											<p><span>Dirección:<br></span>Oldman 704, Loma Verde, Escobar, Buenos Aires, Argentina</p>
+											<p><span>Dirección:<br></span>Rivadavia 730 of 2, Escobar, Buenos Aires, Argentina</p>
 										</div>
 									</div>
 									<div class="dbox w-100 d-flex align-items-center">
