--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
 
 <head>
     <title>Bio Neuro Nutrición : : UCDM</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TW0W96T3JG"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-TW0W96T3JG');
+        </script>
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-WVDR7L5');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <!-- Open Graph-->
     <meta property="og:title" content="Bio Neuro Nutrición : : HOME">
     <meta property="og:site_name" content="Bio Neuro Nutrición : : UCDM">
@@ -16,6 +35,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="shortcut icon" href="./images/SVG/BNNfavIcon.svg" type="image/x-icon">
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -42,6 +63,11 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WVDR7L5"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="navBar"></div>
     <!-- END nav -->
     <script>
