--- a/cursoUCDM1.html
+++ b/cursoUCDM1.html
@@ -14,6 +14,8 @@
   <!-- Open Graph-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link rel="shortcut icon" href="./images/SVG/BNNfavIcon.svg" type="image/x-icon">
   
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 
