Google Tag Maneger 1.0

--- a/cursoNeuroNut.html
+++ b/cursoNeuroNut.html
@@ -2,6 +2,16 @@
 <html lang="es">
 <head>
 	<title>Bio Neuro Nutricion : : Creando un Nuevo Sendero 1</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-207568054-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-207568054-1');
+  </script>
+
 
   <!-- Open Graph-->
   <meta property="og:title" content="Bio Neuro Nutrición : : Creando un Nuevo Sendero 1">
@@ -48,7 +58,7 @@
  <section id="PortadaNeuroNut" class="hero-wrap hero-wrap-2" >
   <div class="overlay"></div>
   <div class="container">
-    <div class="row no-gutters slider-text align-items-end justify-content-center">
+    <div id="titleMain" class="row no-gutters slider-text align-items-end justify-content-center">
       <div class="col-md-9 ftco-animate pb-5 text-center">
        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a href="course.html">Cursos <i class="fa fa-chevron-right"></i></a></span> <span>Bio Neuro Nutrición<i class="fa fa-chevron-right"></i></span></p>
        <h1 id="pageTitle" class="mb-0 bread"></h1>
