--- a/cursoUCDM2.html
+++ b/cursoUCDM2.html
@@ -58,7 +58,7 @@
 <section class="ftco-section bg-light">
   <div class="container">
     <div class="row" >
-      <div class="col-md-4 ftco-animate d-flex align-items-center align-items-stretch">
+      <div id="titleMain" class="col-md-4 ftco-animate d-flex align-items-center align-items-stretch">
         <div class="staff-2 w-100">
           
           <div id="UCDM2" class="col-md-12 ftco-animate"></div>
@@ -84,7 +84,7 @@
             Cada mes nos reunimos para exponer uno de los temas y hacemos una dinámica práctica para aprender e integrar el tema.
             Es un aprendizaje continuo, no tiene principio ni fin, es una propuesta que cada uno puede tomar para sentirse acompañado en el estudio del curso.
             </p>
-          <h4>Entre los temas a tratar:</h4>
+          <h4 id="comprarDestacadoUCDM2">Entre los temas a tratar:</h4>
           <div class="row">
             <div class="col-md-6">
               <ul>
