--- a/cursoNeuroNutL2.html
+++ b/cursoNeuroNutL2.html
@@ -47,7 +47,7 @@
  <section id="PortadaNeuroNutL2" class="hero-wrap hero-wrap-2" >
   <div class="overlay"></div>
   <div class="container">
-    <div class="row no-gutters slider-text align-items-end justify-content-center">
+    <div id="titleMain" class="row no-gutters slider-text align-items-end justify-content-center">
       <div class="col-md-9 ftco-animate pb-5 text-center">
        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a href="course.html">Cursos <i class="fa fa-chevron-right"></i></a></span> <span>Bio Neuro Nutrición<i class="fa fa-chevron-right"></i></span></p>
        <h1 id="pageTitle" class="mb-0 bread"></h1>
