--- a/instructor-details.html
+++ b/instructor-details.html
@@ -38,7 +38,7 @@
  <section class="hero-wrap hero-wrap-2" style="background-image: url('images/instructorBg.jpg');">
   <div class="overlay"></div>
   <div class="container">
-    <div class="row no-gutters slider-text align-items-end justify-content-center">
+    <div id="titleMain" class="row no-gutters slider-text align-items-end justify-content-center">
       <div class="col-md-9 ftco-animate pb-5 text-center">
        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span class="mr-2"><a href="index.html">Instructora <i class="fa fa-chevron-right"></i></a></span> <span>BIO <i class="fa fa-chevron-right"></i></span></p>
        <h1 id="pageTitle" class="mb-0 bread"></h1>
